--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ textarea {
   border: none;
   width: 400px;
   height: 275px;
-  padding: 25px 25px 25px 25px;
+  padding: 35px 25px 25px 25px;
   border-radius: 10px;
   background-color: yellow;
   opacity: 0.8;
@@ -48,18 +48,20 @@ textarea {
 
 svg {
   color: black;
+  width: 20px;
+  height: 20px;
 }
 
 #check_icon {
   position: absolute;
-  right: 17%;
-  top: 8%;
+  right: 12%;
+  top: 2%;
   color: green;
 }
 
 #x_icon {
   position: absolute;
-  right: 8%;
-  top: 8%;
+  right: 4%;
+  top: 2%;
   color: red;
 }
